namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-adjustments-dev/99-redirect_old_url_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect-adjust-release-dates-dev
  namespace: hmpps-adjustments-dev
  annotations:
    nginx.ingress.kubernetes.io/custom-http-errors: "418"
    nginx.ingress.kubernetes.io/rewrite-target: https://adjustments-dev.hmpps.service.justice.gov.uk/$1
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    external-dns.alpha.kubernetes.io/set-identifier: redirect-adjust-release-dates-dev-hmpps-adjustments-dev-green
spec:
  ingressClassName: default
  rules:
    - host: adjust-release-dates-dev.hmpps.service.justice.gov.uk
      http:
        paths:
          - backend:
              service:
                name: hmpps-adjustments
                port:
                  name: http
            path: /(.*)
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - adjust-release-dates-dev.hmpps.service.justice.gov.uk
      secretName: hmpps-adjustments-cert
